--- a/src/main/resources/assets/okzoomer/lang/en_us.json
+++ b/src/main/resources/assets/okzoomer/lang/en_us.json
@@ -1,3 +1,18 @@
 {
-	"key.okzoomer.zoom": "Zoom"
+	"key.okzoomer.zoom": "Zoom",
+	"text.autoconfig.okzoomer.option.smoothCamera": "Smooth Camera",
+	"text.autoconfig.okzoomer.option.smoothCamera.@Tooltip[0]": "Enables Smooth Camera while zooming,",
+	"text.autoconfig.okzoomer.option.smoothCamera.@Tooltip[1]":"interfers with Cinematic Mode but shouldn't be anything negative.",
+	"text.autoconfig.okzoomer.option.smoothDivisor": "Smooth Zoom Divisor",
+	"text.autoconfig.okzoomer.option.smoothDivisor.@Tooltip": "Enables the ability to toggle zooming.",
+	"text.autoconfig.okzoomer.option.zoomMultiplier": "Zoom Multiplier",
+	"text.autoconfig.okzoomer.option.zoomMultiplier.@Tooltip[0]": "The multiplier applied to the FOV when zooming.",
+	"text.autoconfig.okzoomer.option.zoomMultiplier.@Tooltip[1]": "1.25 is the recommended maximum,",
+	"text.autoconfig.okzoomer.option.zoomMultiplier.@Tooltip[2]": "anything above that will break the FOV.",
+	"text.autoconfig.okzoomer.option.zoomToggle": "Zoom Toggle",
+	"text.autoconfig.okzoomer.option.zoomToggle.@Tooltip": "Enables the ability to toggle zooming.",
+	"text.autoconfig.okzoomer.option.smoothTransition": "Smooth Transition",
+	"text.autoconfig.okzoomer.option.smoothTransition.@Tooltip[0]": "Enables Smooth Transitions when zooming in and out.",
+	"text.autoconfig.okzoomer.option.smoothTransition.@Tooltip[1]": "WARNING: It might be prone to breakage, be careful.",
+	"text.autoconfig.okzoomer.title": "Ok Zoomer Config"
 }
