--- a/src/main/resources/assets/okzoomer/lang/en_us.json
+++ b/src/main/resources/assets/okzoomer/lang/en_us.json
@@ -2,9 +2,10 @@
 	"key.okzoomer.zoom": "Zoom",
 	"text.autoconfig.okzoomer.option.smoothCamera": "Smooth Camera",
 	"text.autoconfig.okzoomer.option.smoothCamera.@Tooltip[0]": "Enables Smooth Camera while zooming,",
-	"text.autoconfig.okzoomer.option.smoothCamera.@Tooltip[1]":"interfers with Cinematic Mode but shouldn't be anything negative.",
+	"text.autoconfig.okzoomer.option.smoothCamera.@Tooltip[1]":"interfers with Cinematic Mode but it shouldn't be anything negative.",
 	"text.autoconfig.okzoomer.option.smoothDivisor": "Smooth Zoom Divisor",
-	"text.autoconfig.okzoomer.option.smoothDivisor.@Tooltip": "Enables the ability to toggle zooming.",
+	"text.autoconfig.okzoomer.option.smoothDivisor.@Tooltip[0]": "The divisor used while applying smoothing,",
+	"text.autoconfig.okzoomer.option.smoothDivisor.@Tooltip[1]": "smaller number zooms faster, higher is slower.",
 	"text.autoconfig.okzoomer.option.zoomMultiplier": "Zoom Multiplier",
 	"text.autoconfig.okzoomer.option.zoomMultiplier.@Tooltip[0]": "The multiplier applied to the FOV when zooming.",
 	"text.autoconfig.okzoomer.option.zoomMultiplier.@Tooltip[1]": "1.25 is the recommended maximum,",
