--- a/src/main/resources/assets/okzoomer/lang/pt_br.json
+++ b/src/main/resources/assets/okzoomer/lang/pt_br.json
@@ -1,19 +1,21 @@
 {
 	"key.okzoomer.zoom": "Zoom",
 	"text.autoconfig.okzoomer.option.smoothCamera": "Câmera suave",
-    "text.autoconfig.okzoomer.option.smoothCamera.@Tooltip[0]": "Ativa a câmera suave enquanto dar zoom, interfere com",
-    "text.autoconfig.okzoomer.option.smoothCamera.@Tooltip[1]": "a câmera cinematográfica mas isso não deve ser nada negativo.",
-    "text.autoconfig.okzoomer.option.smoothDivisor": "Divisor da transição suave",
-    "text.autoconfig.okzoomer.option.smoothDivisor.@Tooltip[0]": "O divisor usado enquanto aplica a suavização",
-    "text.autoconfig.okzoomer.option.smoothDivisor.@Tooltip[1]": "um número menor dá o zoom mais rápido, um número maior é mais lento.",
-    "text.autoconfig.okzoomer.option.zoomMultiplier": "Multiplicador do zoom",
-	"text.autoconfig.okzoomer.option.zoomMultiplier.@Tooltip[0]": "O mulitplicador aplicado no campo visual enquanto dar zoom,",
-	"text.autoconfig.okzoomer.option.zoomMultiplier.@Tooltip[1]": "1.25 é o máximo recomendado",
-    "text.autoconfig.okzoomer.option.zoomMultiplier.@Tooltip[2]": "qualquer número maior do que isso vai quebrar o campo visual.",
+	"text.autoconfig.okzoomer.option.smoothCamera.@Tooltip[0]": "Ativa a câmera suave enquanto dar zoom, interfere com",
+	"text.autoconfig.okzoomer.option.smoothCamera.@Tooltip[1]": "a câmera cinematográfica mas isso não deve ser nada negativo.",
+	"text.autoconfig.okzoomer.option.smoothTransitionOptions": "Opções da câmera suave",
+	"text.autoconfig.okzoomer.option.smoothTransitionOptions.smoothTransition": "Transição suave",
+	"text.autoconfig.okzoomer.option.smoothTransitionOptions.smoothTransition.@Tooltip": "Ativa transições suaves enquanto entra e sai do zoom.",
+	"text.autoconfig.okzoomer.option.smoothTransitionOptions.smoothDivisor": "Divisor da transição suave",
+	"text.autoconfig.okzoomer.option.smoothTransitionOptions.smoothDivisor.@Tooltip[0]": "O divisor usado enquanto aplica a suavização",
+	"text.autoconfig.okzoomer.option.smoothTransitionOptions.smoothDivisor.@Tooltip[1]": "um número menor dá o zoom mais rápido, um número maior é mais lento.",
+	"text.autoconfig.okzoomer.option.smoothTransitionOptions.timesToRepeatSmoothing": "Vezes para repetir a suavização",
+	"text.autoconfig.okzoomer.option.smoothTransitionOptions.timesToRepeatSmoothing.@Tooltip": "O número de vezes que a suavização é aplicada durante a transição.",
+	"text.autoconfig.okzoomer.option.zoomMultiplier": "Multiplicador do zoom",
+	"text.autoconfig.okzoomer.option.zoomMultiplier.@Tooltip[0]": "O mulitplicador aplicado no campo visual enquanto dar zoom.",
+	"text.autoconfig.okzoomer.option.zoomMultiplier.@Tooltip[1]": "1.25 é o máximo recomendado,",
+	"text.autoconfig.okzoomer.option.zoomMultiplier.@Tooltip[2]": "qualquer número maior do que isso vai quebrar o campo visual.",
 	"text.autoconfig.okzoomer.option.zoomToggle": "Alternar zoom",
 	"text.autoconfig.okzoomer.option.zoomToggle.@Tooltip": "Ativa a habilidade de alternar o zoom.",
-    "text.autoconfig.okzoomer.option.smoothTransition": "Transição suave",
-	"text.autoconfig.okzoomer.option.smoothTransition.@Tooltip[0]": "Ativa transições suaves enquanto entra e sai do zoom.",
-	"text.autoconfig.okzoomer.option.smoothTransition.@Tooltip[1]": "AVISO: Elas estão propensas a se quebrarem, tome cuidado.",
-    "text.autoconfig.okzoomer.title": "Configurações do Ok Zoomer"
+	"text.autoconfig.okzoomer.title": "Configurações do Ok Zoomer"
 }
