--- a/src/main/resources/assets/okzoomer/lang/en_us.json
+++ b/src/main/resources/assets/okzoomer/lang/en_us.json
@@ -3,17 +3,19 @@
 	"text.autoconfig.okzoomer.option.smoothCamera": "Smooth Camera",
 	"text.autoconfig.okzoomer.option.smoothCamera.@Tooltip[0]": "Enables Smooth Camera while zooming,",
 	"text.autoconfig.okzoomer.option.smoothCamera.@Tooltip[1]": "interfers with Cinematic Mode but it shouldn't be anything negative.",
-	"text.autoconfig.okzoomer.option.smoothDivisor": "Smooth Transition Divisor",
-	"text.autoconfig.okzoomer.option.smoothDivisor.@Tooltip[0]": "The divisor used while applying smoothing,",
-	"text.autoconfig.okzoomer.option.smoothDivisor.@Tooltip[1]": "smaller number zooms faster, bigger number zoom slower.",
+	"text.autoconfig.okzoomer.option.smoothTransitionOptions": "Smooth Transition Options",
+	"text.autoconfig.okzoomer.option.smoothTransitionOptions.smoothTransition": "Smooth Transition",
+	"text.autoconfig.okzoomer.option.smoothTransitionOptions.smoothTransition.@Tooltip": "Enables Smooth Transitions when zooming in and out.",
+	"text.autoconfig.okzoomer.option.smoothTransitionOptions.smoothDivisor": "Smooth Transition Divisor",
+	"text.autoconfig.okzoomer.option.smoothTransitionOptions.smoothDivisor.@Tooltip[0]": "The divisor used while applying smoothing,",
+	"text.autoconfig.okzoomer.option.smoothTransitionOptions.smoothDivisor.@Tooltip[1]": "smaller number zooms faster, bigger number zoom slower.",
+	"text.autoconfig.okzoomer.option.smoothTransitionOptions.timesToRepeatSmoothing": "Times to Repeat Smoothing",
+	"text.autoconfig.okzoomer.option.smoothTransitionOptions.timesToRepeatSmoothing.@Tooltip": "The number of times the smoothing is applied during the transition.",
 	"text.autoconfig.okzoomer.option.zoomMultiplier": "Zoom Multiplier",
 	"text.autoconfig.okzoomer.option.zoomMultiplier.@Tooltip[0]": "The multiplier applied to the FOV when zooming.",
 	"text.autoconfig.okzoomer.option.zoomMultiplier.@Tooltip[1]": "1.25 is the recommended maximum,",
 	"text.autoconfig.okzoomer.option.zoomMultiplier.@Tooltip[2]": "anything above that will break the FOV.",
 	"text.autoconfig.okzoomer.option.zoomToggle": "Zoom Toggle",
 	"text.autoconfig.okzoomer.option.zoomToggle.@Tooltip": "Enables the ability to toggle zooming.",
-	"text.autoconfig.okzoomer.option.smoothTransition": "Smooth Transition",
-	"text.autoconfig.okzoomer.option.smoothTransition.@Tooltip[0]": "Enables Smooth Transitions when zooming in and out.",
-	"text.autoconfig.okzoomer.option.smoothTransition.@Tooltip[1]": "WARNING: It might be prone to breakage, be careful.",
 	"text.autoconfig.okzoomer.title": "Ok Zoomer Config"
 }
