--- a/src/main/resources/assets/okzoomer/lang/en_us.json
+++ b/src/main/resources/assets/okzoomer/lang/en_us.json
@@ -3,14 +3,19 @@
 	"text.autoconfig.okzoomer.option.smoothCamera": "Smooth Camera",
 	"text.autoconfig.okzoomer.option.smoothCamera.@Tooltip[0]": "Enables Smooth Camera while zooming,",
 	"text.autoconfig.okzoomer.option.smoothCamera.@Tooltip[1]": "interfers with Cinematic Mode but it shouldn't be anything negative.",
-	"text.autoconfig.okzoomer.option.smoothTransitionOptions": "Smooth Transition Options",
-	"text.autoconfig.okzoomer.option.smoothTransitionOptions.smoothTransition": "Smooth Transition",
-	"text.autoconfig.okzoomer.option.smoothTransitionOptions.smoothTransition.@Tooltip": "Enables Smooth Transitions when zooming in and out.",
-	"text.autoconfig.okzoomer.option.smoothTransitionOptions.smoothDivisor": "Smooth Transition Divisor",
-	"text.autoconfig.okzoomer.option.smoothTransitionOptions.smoothDivisor.@Tooltip[0]": "The divisor used while applying smoothing,",
-	"text.autoconfig.okzoomer.option.smoothTransitionOptions.smoothDivisor.@Tooltip[1]": "smaller number zooms faster, bigger number zoom slower.",
-	"text.autoconfig.okzoomer.option.smoothTransitionOptions.timesToRepeatSmoothing": "Times to Repeat Smoothing",
-	"text.autoconfig.okzoomer.option.smoothTransitionOptions.timesToRepeatSmoothing.@Tooltip": "The number of times the smoothing is applied during the transition.",
+	"text.autoconfig.okzoomer.option.smoothTransition": "Smooth Transition",
+	"text.autoconfig.okzoomer.option.smoothTransition.@Tooltip": "Enables Smooth Transitions when zooming in and out.",
+	"text.autoconfig.okzoomer.option.advancedSmoothTransSettings": "Advanced Smooth Transition Settings",
+	"text.autoconfig.okzoomer.option.advancedSmoothTransSettings.@Tooltip": "More specific settings for Smooth Transitions, prone to breakage.",
+	"text.autoconfig.okzoomer.option.advancedSmoothTransSettings.smoothDivisor": "Smooth Transition Divisor",
+	"text.autoconfig.okzoomer.option.advancedSmoothTransSettings.smoothDivisor.@Tooltip[0]": "The divisor used while applying smoothing,",
+	"text.autoconfig.okzoomer.option.advancedSmoothTransSettings.smoothDivisor.@Tooltip[1]": "smaller number zooms faster, bigger number zoom slower.",
+	"text.autoconfig.okzoomer.option.advancedSmoothTransSettings.timesToRepeatSmoothing": "Times to Repeat Smoothing",
+	"text.autoconfig.okzoomer.option.advancedSmoothTransSettings.timesToRepeatSmoothing.@Tooltip": "The number of times the smoothing is applied during the transition.",
+	"text.autoconfig.okzoomer.option.advancedSmoothTransSettings.smoothInMultiplier": "Smooth In Multiplier",
+	"text.autoconfig.okzoomer.option.advancedSmoothTransSettings.smoothInMultiplier.@Tooltip": "The multiplier used on the FOV's smoothing while it's being zoomed in.",
+	"text.autoconfig.okzoomer.option.advancedSmoothTransSettings.smoothOutMultiplier": "Smooth Out Multiplier",
+	"text.autoconfig.okzoomer.option.advancedSmoothTransSettings.smoothOutMultiplier.@Tooltip": "The multiplier used on the FOV's smoothing while it's being zoomed out.",
 	"text.autoconfig.okzoomer.option.zoomMultiplier": "Zoom Multiplier",
 	"text.autoconfig.okzoomer.option.zoomMultiplier.@Tooltip[0]": "The multiplier applied to the FOV when zooming.",
 	"text.autoconfig.okzoomer.option.zoomMultiplier.@Tooltip[1]": "1.25 is the recommended maximum,",
