--- a/src/main/resources/assets/okzoomer/lang/pt_br.json
+++ b/src/main/resources/assets/okzoomer/lang/pt_br.json
@@ -3,14 +3,19 @@
 	"text.autoconfig.okzoomer.option.smoothCamera": "Câmera suave",
 	"text.autoconfig.okzoomer.option.smoothCamera.@Tooltip[0]": "Ativa a câmera suave enquanto dar zoom, interfere com",
 	"text.autoconfig.okzoomer.option.smoothCamera.@Tooltip[1]": "a câmera cinematográfica mas isso não deve ser nada negativo.",
-	"text.autoconfig.okzoomer.option.smoothTransitionOptions": "Opções da câmera suave",
-	"text.autoconfig.okzoomer.option.smoothTransitionOptions.smoothTransition": "Transição suave",
-	"text.autoconfig.okzoomer.option.smoothTransitionOptions.smoothTransition.@Tooltip": "Ativa transições suaves enquanto entra e sai do zoom.",
-	"text.autoconfig.okzoomer.option.smoothTransitionOptions.smoothDivisor": "Divisor da transição suave",
-	"text.autoconfig.okzoomer.option.smoothTransitionOptions.smoothDivisor.@Tooltip[0]": "O divisor usado enquanto aplica a suavização",
-	"text.autoconfig.okzoomer.option.smoothTransitionOptions.smoothDivisor.@Tooltip[1]": "um número menor dá o zoom mais rápido, um número maior é mais lento.",
-	"text.autoconfig.okzoomer.option.smoothTransitionOptions.timesToRepeatSmoothing": "Vezes para repetir a suavização",
-	"text.autoconfig.okzoomer.option.smoothTransitionOptions.timesToRepeatSmoothing.@Tooltip": "O número de vezes que a suavização é aplicada durante a transição.",
+	"text.autoconfig.okzoomer.option.smoothTransition": "Transição suave",
+	"text.autoconfig.okzoomer.option.smoothTransition.@Tooltip": "Ativa transições suaves enquanto entra e sai do zoom.",
+	"text.autoconfig.okzoomer.option.advancedSmoothTransSettings": "Ajustes avançados da câmera suave",
+	"text.autoconfig.okzoomer.option.advancedSmoothTransSettings.@Tooltip": "Ajustes mais specificas para transições suaves, fácil de quebrar.",
+	"text.autoconfig.okzoomer.option.advancedSmoothTransSettings.smoothDivisor": "Divisor da transição suave",
+	"text.autoconfig.okzoomer.option.advancedSmoothTransSettings.smoothDivisor.@Tooltip[0]": "O divisor usado enquanto aplica a suavização",
+	"text.autoconfig.okzoomer.option.advancedSmoothTransSettings.smoothDivisor.@Tooltip[1]": "um número menor dá o zoom mais rápido, um número maior é mais lento.",
+	"text.autoconfig.okzoomer.option.advancedSmoothTransSettings.timesToRepeatSmoothing": "Vezes para repetir a suavização",
+	"text.autoconfig.okzoomer.option.advancedSmoothTransSettings.timesToRepeatSmoothing.@Tooltip": "O número de vezes que a suavização é aplicada durante a transição.",
+	"text.autoconfig.okzoomer.option.advancedSmoothTransSettings.transitionStartMultiplier": "Multiplicador do começo da trans.",
+	"text.autoconfig.okzoomer.option.advancedSmoothTransSettings.transitionStartMultiplier.@Tooltip": "O multiplicador usado na suavização do FOV enquanto entra no zoom.",
+	"text.autoconfig.okzoomer.option.advancedSmoothTransSettings.transitionEndMultiplier": "Multiplicador do fim da transição",
+	"text.autoconfig.okzoomer.option.advancedSmoothTransSettings.transitionEndMultiplier.@Tooltip": "O multiplicador usado na suavização do FOV enquanto sai no zoom.",
 	"text.autoconfig.okzoomer.option.zoomMultiplier": "Multiplicador do zoom",
 	"text.autoconfig.okzoomer.option.zoomMultiplier.@Tooltip[0]": "O mulitplicador aplicado no campo visual enquanto dar zoom.",
 	"text.autoconfig.okzoomer.option.zoomMultiplier.@Tooltip[1]": "1.25 é o máximo recomendado,",
