Lay down foundation for hiding hands. Ugh, looks like i will have to use Mixins... The option is there, the only thing missing is the feature.

--- a/src/main/resources/assets/okzoomer/lang/en_us.json
+++ b/src/main/resources/assets/okzoomer/lang/en_us.json
@@ -2,6 +2,8 @@
 	"key.okzoomer.zoom": "Zoom",
 	"text.autoconfig.okzoomer.option.smoothCamera": "Smooth Camera",
 	"text.autoconfig.okzoomer.option.smoothCamera.@Tooltip[0]": "Enables Smooth Camera while zooming,",
+	"text.autoconfig.okzoomer.option.hideHands": "Hide Hands",
+	"text.autoconfig.okzoomer.option.hideHands.@Tooltip": "While enabled, zooming hides your hands.",
 	"text.autoconfig.okzoomer.option.smoothCamera.@Tooltip[1]": "interfers with Cinematic Mode but it shouldn't be anything negative.",
 	"text.autoconfig.okzoomer.option.smoothTransition": "Smooth Transition",
 	"text.autoconfig.okzoomer.option.smoothTransition.@Tooltip": "Enables smooth transitions when zooming in and out.",
