--- a/src/main/resources/assets/okzoomer/lang/pt_br.json
+++ b/src/main/resources/assets/okzoomer/lang/pt_br.json
@@ -3,6 +3,8 @@
 	"text.autoconfig.okzoomer.option.smoothCamera": "Câmera suave",
 	"text.autoconfig.okzoomer.option.smoothCamera.@Tooltip[0]": "Ativa a câmera suave enquanto dar zoom, interfere com",
 	"text.autoconfig.okzoomer.option.smoothCamera.@Tooltip[1]": "a câmera cinematográfica mas isso não deve ser nada negativo.",
+	"text.autoconfig.okzoomer.option.hideHands": "Esconder mãos",
+	"text.autoconfig.okzoomer.option.hideHands.@Tooltip": "Enquanto ativado, o zoom esconde as suas mãos.",
 	"text.autoconfig.okzoomer.option.smoothTransition": "Transição suave",
 	"text.autoconfig.okzoomer.option.smoothTransition.@Tooltip": "Ativa transições suaves enquanto entra e sai do zoom.",
 	"text.autoconfig.okzoomer.option.advancedSmoothTransSettings": "Ajustes avançados da câmera suave",
