Start work on Zoom Divisors RIP reverse-zoom, they will be restored later. Zoom Divisors will replace the Zoom Multipliers. Zoom Scrolling should be easier to make with this.

--- a/src/main/resources/assets/okzoomer/lang/pt_br.json
+++ b/src/main/resources/assets/okzoomer/lang/pt_br.json
@@ -19,12 +19,10 @@
 	"text.autoconfig.okzoomer.option.advancedSmoothTransSettings.transitionEndMultiplier": "Multiplicador do fim da transição",
 	"text.autoconfig.okzoomer.option.advancedSmoothTransSettings.transitionEndMultiplier.@Tooltip": "O multiplicador usado na suavização do FOV enquanto sai no zoom.",
 	"text.autoconfig.okzoomer.option.reduceSensitivity": "Reduzir sensibilidade",
-	"text.autoconfig.okzoomer.option.reduceSensitivity.@Tooltip": "Reduz a sensibilidade do mouse enquando dar zoom.",
+	"text.autoconfig.okzoomer.option.reduceSensitivity.@Tooltip": "Reduz a sensibilidade do mouse enquanto dar zoom.",
 	"text.autoconfig.okzoomer.option.zoomToggle": "Alternar zoom",
 	"text.autoconfig.okzoomer.option.zoomToggle.@Tooltip": "Ativa a habilidade de alternar o zoom.",
-	"text.autoconfig.okzoomer.option.zoomMultiplier": "Multiplicador do zoom",
-	"text.autoconfig.okzoomer.option.zoomMultiplier.@Tooltip[0]": "O mulitplicador aplicado no campo visual enquanto dar zoom.",
-	"text.autoconfig.okzoomer.option.zoomMultiplier.@Tooltip[1]": "1.25 é o máximo recomendado,",
-	"text.autoconfig.okzoomer.option.zoomMultiplier.@Tooltip[2]": "qualquer número maior do que isso vai quebrar o campo visual.",
+	"text.autoconfig.okzoomer.option.zoomMultiplier": "Divisor do zoom",
+	"text.autoconfig.okzoomer.option.zoomMultiplier.@Tooltip": "O divisor aplicado no campo visual enquanto dar zoom.",
 	"text.autoconfig.okzoomer.title": "Configurações do Ok Zoomer"
 }
