--- a/src/main/resources/assets/okzoomer/lang/en_us.json
+++ b/src/main/resources/assets/okzoomer/lang/en_us.json
@@ -22,9 +22,7 @@
 	"text.autoconfig.okzoomer.option.reduceSensitivity.@Tooltip": "Reduces the mouse sensitivity when zooming.",
 	"text.autoconfig.okzoomer.option.zoomToggle": "Zoom Toggle",
 	"text.autoconfig.okzoomer.option.zoomToggle.@Tooltip": "Enables the ability to toggle zooming.",
-	"text.autoconfig.okzoomer.option.zoomMultiplier": "Zoom Multiplier",
-	"text.autoconfig.okzoomer.option.zoomMultiplier.@Tooltip[0]": "The multiplier applied to the FOV when zooming.",
-	"text.autoconfig.okzoomer.option.zoomMultiplier.@Tooltip[1]": "1.25 is the recommended maximum,",
-	"text.autoconfig.okzoomer.option.zoomMultiplier.@Tooltip[2]": "anything above that will break the FOV.",
+	"text.autoconfig.okzoomer.option.zoomDivisor": "Zoom Divisor",
+	"text.autoconfig.okzoomer.option.zoomDivisor.@Tooltip": "The divisor applied to the FOV's zoom multiplier.",
 	"text.autoconfig.okzoomer.title": "Ok Zoomer Config"
 }
