Fix the edge case using new config Also, rearranged the config to be more neat and organized.

--- a/src/main/resources/assets/okzoomer/lang/pt_br.json
+++ b/src/main/resources/assets/okzoomer/lang/pt_br.json
@@ -3,17 +3,21 @@
 	"text.autoconfig.okzoomer.option.smoothCamera": "Câmera suave",
 	"text.autoconfig.okzoomer.option.smoothCamera.@Tooltip[0]": "Ativa a câmera suave enquanto dar zoom, interfere com",
 	"text.autoconfig.okzoomer.option.smoothCamera.@Tooltip[1]": "a câmera cinematográfica mas isso não deve ser nada negativo.",
+	"text.autoconfig.okzoomer.option.reduceSensitivity": "Reduzir sensibilidade",
+	"text.autoconfig.okzoomer.option.reduceSensitivity.@Tooltip": "Reduz a sensibilidade do mouse enquanto dar zoom.",
 	"text.autoconfig.okzoomer.option.hideHands": "Esconder mãos",
 	"text.autoconfig.okzoomer.option.hideHands.@Tooltip": "Enquanto ativado, o zoom esconde as suas mãos.",
 	"text.autoconfig.okzoomer.option.smoothTransition": "Transição suave",
 	"text.autoconfig.okzoomer.option.smoothTransition.@Tooltip": "Ativa transições suaves enquanto entra e sai do zoom.",
-	"text.autoconfig.okzoomer.option.reduceSensitivity": "Reduzir sensibilidade",
-	"text.autoconfig.okzoomer.option.reduceSensitivity.@Tooltip": "Reduz a sensibilidade do mouse enquanto dar zoom.",
 	"text.autoconfig.okzoomer.option.zoomToggle": "Alternar zoom",
 	"text.autoconfig.okzoomer.option.zoomToggle.@Tooltip": "Ativa a habilidade de alternar o zoom.",
-	"text.autoconfig.okzoomer.option.zoomScrolling": "Rolagem do zoom",
-	"text.autoconfig.okzoomer.option.zoomScrolling.@Tooltip": "Permite o aumento ou a diminuição do zoom pela rolagem do mouse.",
 	"text.autoconfig.okzoomer.option.zoomDivisor": "Divisor do zoom",
 	"text.autoconfig.okzoomer.option.zoomDivisor.@Tooltip": "O divisor aplicado no multiplicador do zoom do campo visual.",
+	"text.autoconfig.okzoomer.option.zoomScrolling": "Rolagem do zoom",
+	"text.autoconfig.okzoomer.option.zoomScrolling.@Tooltip": "Permite o aumento ou a diminuição do zoom pela rolagem do mouse.",
+	"text.autoconfig.okzoomer.option.minimumZoomDivisor": "Divisor do zoom mínimo",
+	"text.autoconfig.okzoomer.option.minimumZoomDivisor.@Tooltip": "O valor mínimo que você pode rolar pra baixo.",
+	"text.autoconfig.okzoomer.option.maximumZoomDivisor": "Divisor do zoom máximo",
+	"text.autoconfig.okzoomer.option.maximumZoomDivisor.@Tooltip": "O valor máximo que você pode rolar pra cima.",
 	"text.autoconfig.okzoomer.title": "Configurações do Ok Zoomer"
 }
