--- a/src/main/resources/assets/okzoomer/lang/en_us.json
+++ b/src/main/resources/assets/okzoomer/lang/en_us.json
@@ -1,23 +1,24 @@
 {
 	"key.okzoomer.zoom": "Zoom",
-	"text.autoconfig.okzoomer.option.smoothCamera": "Smooth Camera",
-	"text.autoconfig.okzoomer.option.smoothCamera.@Tooltip[0]": "Enables Smooth Camera while zooming,",
-	"text.autoconfig.okzoomer.option.smoothCamera.@Tooltip[1]": "interfers with Cinematic Mode but it shouldn't be anything negative.",
-	"text.autoconfig.okzoomer.option.reduceSensitivity": "Reduce Sensitivity",
-	"text.autoconfig.okzoomer.option.reduceSensitivity.@Tooltip": "Reduces the mouse sensitivity when zooming.",
-	"text.autoconfig.okzoomer.option.hideHands": "Hide Hands",
-	"text.autoconfig.okzoomer.option.hideHands.@Tooltip": "While enabled, zooming hides your hands.",
-	"text.autoconfig.okzoomer.option.smoothTransition": "Smooth Transition",
-	"text.autoconfig.okzoomer.option.smoothTransition.@Tooltip": "Enables smooth transitions when zooming in and out.",
-	"text.autoconfig.okzoomer.option.zoomToggle": "Zoom Toggle",
-	"text.autoconfig.okzoomer.option.zoomToggle.@Tooltip": "Enables the ability to toggle zooming.",
-	"text.autoconfig.okzoomer.option.zoomDivisor": "Zoom Divisor",
-	"text.autoconfig.okzoomer.option.zoomDivisor.@Tooltip": "The divisor applied to the FOV's zoom multiplier.",
-	"text.autoconfig.okzoomer.option.zoomScrolling": "Zoom Scrolling",
-	"text.autoconfig.okzoomer.option.zoomScrolling.@Tooltip": "Allows to increase or decrease zoom by scrolling.",
-	"text.autoconfig.okzoomer.option.minimumZoomDivisor": "Minimum Zoom Divisor",
-	"text.autoconfig.okzoomer.option.minimumZoomDivisor.@Tooltip": "The minimum value that you can scroll down.",
-	"text.autoconfig.okzoomer.option.maximumZoomDivisor": "Maximum Zoom Divisor",
-	"text.autoconfig.okzoomer.option.maximumZoomDivisor.@Tooltip": "The maximum value that you can scroll up.",
-	"text.autoconfig.okzoomer.title": "Ok Zoomer Config"
+	"text.okzoomer.config.option.smoothCamera": "Smooth Camera",
+	"text.okzoomer.config.option.smoothCamera.tooltip.1": "Enables Smooth Camera while zooming,",
+	"text.okzoomer.config.option.smoothCamera.tooltip.2": "interfers with Cinematic Mode but it shouldn't be anything negative.",
+	"text.okzoomer.config.option.reduceSensitivity": "Reduce Sensitivity",
+	"text.okzoomer.config.option.reduceSensitivity.tooltip": "Reduces the mouse sensitivity when zooming.",
+	"text.okzoomer.config.option.hideHands": "Hide Hands",
+	"text.okzoomer.config.option.hideHands.tooltip": "While enabled, zooming hides your hands.",
+	"text.okzoomer.config.option.smoothTransition": "Smooth Transition",
+	"text.okzoomer.config.option.smoothTransition.tooltip": "Enables smooth transitions when zooming in and out.",
+	"text.okzoomer.config.option.zoomToggle": "Zoom Toggle",
+	"text.okzoomer.config.option.zoomToggle.tooltip": "Enables the ability to toggle zooming.",
+	"text.okzoomer.config.option.zoomDivisor": "Zoom Divisor",
+	"text.okzoomer.config.option.zoomDivisor.tooltip": "The divisor applied to the FOV's zoom multiplier.",
+	"text.okzoomer.config.option.zoomScrolling": "Zoom Scrolling",
+	"text.okzoomer.config.option.zoomScrolling.tooltip": "Allows to increase or decrease zoom by scrolling.",
+	"text.okzoomer.config.option.minimumZoomDivisor": "Minimum Zoom Divisor",
+	"text.okzoomer.config.option.minimumZoomDivisor.tooltip": "The minimum value that you can scroll down.",
+	"text.okzoomer.config.option.maximumZoomDivisor": "Maximum Zoom Divisor",
+	"text.okzoomer.config.option.maximumZoomDivisor.tooltip": "The maximum value that you can scroll up.",
+	"text.okzoomer.config.category.general": "General",
+	"text.okzoomer.config.title": "Ok Zoomer Config"
 }
