Reimplement ways to control the zoom's movement

--- a/src/main/resources/assets/okzoomer/lang/en_us.json
+++ b/src/main/resources/assets/okzoomer/lang/en_us.json
@@ -1,24 +1,27 @@
 {
-	"key.okzoomer.zoom": "Zoom",
-	"config.okzoomer.option.smoothCamera": "Smooth Camera",
-	"config.okzoomer.option.smoothCamera.tooltip.1": "Enables Smooth Camera while zooming,",
-	"config.okzoomer.option.smoothCamera.tooltip.2": "interfers with Cinematic Mode but it shouldn't be anything negative.",
-	"config.okzoomer.option.reduceSensitivity": "Reduce Sensitivity",
-	"config.okzoomer.option.reduceSensitivity.tooltip": "Reduces the mouse sensitivity when zooming.",
-	"config.okzoomer.option.hideHands": "Hide Hands",
-	"config.okzoomer.option.hideHands.tooltip": "While enabled, zooming hides your hands.",
-	"config.okzoomer.option.smoothTransition": "Smooth Transition",
-	"config.okzoomer.option.smoothTransition.tooltip": "Enables smooth transitions when zooming in and out.",
-	"config.okzoomer.option.zoomToggle": "Zoom Toggle",
-	"config.okzoomer.option.zoomToggle.tooltip": "Enables the ability to toggle zooming.",
-	"config.okzoomer.option.zoomDivisor": "Zoom Divisor",
-	"config.okzoomer.option.zoomDivisor.tooltip": "The divisor applied to the FOV's zoom multiplier.",
-	"config.okzoomer.option.zoomScrolling": "Zoom Scrolling",
-	"config.okzoomer.option.zoomScrolling.tooltip": "Allows to increase or decrease zoom by scrolling.",
-	"config.okzoomer.option.minimumZoomDivisor": "Minimum Zoom Divisor",
-	"config.okzoomer.option.minimumZoomDivisor.tooltip": "The minimum value that you can scroll down.",
-	"config.okzoomer.option.maximumZoomDivisor": "Maximum Zoom Divisor",
-	"config.okzoomer.option.maximumZoomDivisor.tooltip": "The maximum value that you can scroll up.",
+	"config.okzoomer.option.cinematic_camera": "Cinematic Camera",
+	"config.okzoomer.option.cinematic_camera.tooltip": "Enables the cinematic camera while zooming.",
+	"config.okzoomer.option.use_alternative_smoothing": "Use Alternative Smoothing",
+	"config.okzoomer.option.use_alternative_smoothing.tooltip": "Makes the zoom's cinematic camera linger less.",
+	"config.okzoomer.option.reduce_sensitivity": "Reduce Sensitivity",
+	"config.okzoomer.option.reduce_sensitivity.tooltip": "Reduces the mouse sensitivity when zooming.",
+	"config.okzoomer.option.hide_hands": "Hide Hands",
+	"config.okzoomer.option.hide_hands.tooltip": "While enabled, zooming hides your hands.",
+	"config.okzoomer.option.smooth_transition": "Smooth Transition",
+	"config.okzoomer.option.smooth_transition.tooltip": "Enables smooth transitions when zooming in and out.",
+	"config.okzoomer.option.zoom_toggle": "Zoom Toggle",
+	"config.okzoomer.option.zoom_toggle.tooltip": "Enables the ability to toggle zooming.",
+	"config.okzoomer.option.zoom_divisor": "Zoom Divisor",
+	"config.okzoomer.option.zoom_divisor.tooltip": "The divisor applied to the FOV's zoom multiplier.",
+	"config.okzoomer.option.zoom_scrolling": "Zoom Scrolling",
+	"config.okzoomer.option.zoom_scrolling.tooltip": "Allows to increase or decrease zoom by scrolling.",
+	"config.okzoomer.option.minimum_zoom_divisor": "Minimum Zoom Divisor",
+	"config.okzoomer.option.minimum_zoom_divisor.tooltip": "The minimum value that you can scroll down.",
+	"config.okzoomer.option.maximum_zoom_divisor": "Maximum Zoom Divisor",
+	"config.okzoomer.option.maximum_zoom_divisor.tooltip": "The maximum value that you can scroll up.",
 	"config.okzoomer.category.general": "General",
-	"config.okzoomer.title": "Ok Zoomer Config"
+	"config.okzoomer.title": "Ok Zoomer Config",
+	"key.okzoomer.zoom": "Zoom",
+	"key.okzoomer.decrease_zoom": "Decrease Zoom",
+	"key.okzoomer.increase_zoom": "Increase Zoom"
 }
