Commit all the progress done today What has been done: A "Decrease Zoom" keybind has been created, it's another debug thing for now The main class now manages a signal to do post-zoom actions, fixing the terrain glitching for both zoom modes Cinematic Camera now has 3 modes instead of being a boolean, simplifying things The Brazilian Portuguese translation was updated in order to test the config toggle The Dutch translation lost another part, I'm probably removing this, but there's not too much harm on keeping what remains of it At this point, the only feature that is missing from the original is zoom scrolling Even after the feature parity, there's still a lot to improve on

--- a/src/main/resources/assets/okzoomer/lang/en_us.json
+++ b/src/main/resources/assets/okzoomer/lang/en_us.json
@@ -1,6 +1,9 @@
 {
 	"config.okzoomer.option.cinematic_camera": "Cinematic Camera",
 	"config.okzoomer.option.cinematic_camera.tooltip": "Enables the cinematic camera while zooming.",
+	"config.okzoomer.option.cinematic_camera.off": "Off",
+	"config.okzoomer.option.cinematic_camera.vanilla": "Vanilla",
+	"config.okzoomer.option.cinematic_camera.4x": "4x",
 	"config.okzoomer.option.use_alternative_smoothing": "Use Alternative Smoothing",
 	"config.okzoomer.option.use_alternative_smoothing.tooltip": "Makes the zoom's cinematic camera linger less.",
 	"config.okzoomer.option.reduce_sensitivity": "Reduce Sensitivity",
