--- a/src/main/resources/assets/okzoomer/lang/en_us.json
+++ b/src/main/resources/assets/okzoomer/lang/en_us.json
@@ -4,14 +4,19 @@
 	"config.okzoomer.option.cinematic_camera.off": "Off",
 	"config.okzoomer.option.cinematic_camera.vanilla": "Vanilla",
 	"config.okzoomer.option.cinematic_camera.multiplied": "Multiplied",
-	"config.okzoomer.option.use_alternative_smoothing": "Use Alternative Smoothing",
-	"config.okzoomer.option.use_alternative_smoothing.tooltip": "Makes the zoom's cinematic camera linger less.",
+	"config.okzoomer.option.cinematic_multiplier": "Cinematic Multiplier",
+	"config.okzoomer.option.cinematic_multiplier.tooltip": "The multiplier used on the multiplied cinematic camera.",
 	"config.okzoomer.option.reduce_sensitivity": "Reduce Sensitivity",
 	"config.okzoomer.option.reduce_sensitivity.tooltip": "Reduces the mouse sensitivity when zooming.",
 	"config.okzoomer.option.hide_hands": "Hide Hands",
 	"config.okzoomer.option.hide_hands.tooltip": "While enabled, zooming hides your hands.",
 	"config.okzoomer.option.smooth_transition": "Smooth Transition",
 	"config.okzoomer.option.smooth_transition.tooltip": "Enables smooth transitions when zooming in and out.",
+	"config.okzoomer.option.zoom_transition": "Zoom Transition",
+	"config.okzoomer.option.zoom_transition.tooltip": "Adds transitions between zooms.",
+	"config.okzoomer.option.zoom_transition.off": "Off",
+	"config.okzoomer.option.zoom_transition.smooth": "Smooth",
+	"config.okzoomer.option.zoom_transition.linear": "Linear",
 	"config.okzoomer.option.zoom_toggle": "Zoom Toggle",
 	"config.okzoomer.option.zoom_toggle.tooltip": "Enables the ability to toggle zooming.",
 	"config.okzoomer.option.zoom_divisor": "Zoom Divisor",
