Do progress towards the first alpha This was almost going to be released, but I screwed around too much... However, this is very close to the first alpha! Only few issues are left

--- a/src/main/resources/assets/okzoomer/lang/en_us.json
+++ b/src/main/resources/assets/okzoomer/lang/en_us.json
@@ -1,4 +1,7 @@
 {
+	"config.okzoomer.category.general": "General",
+	"config.okzoomer.option.reduce_sensitivity": "Reduce Sensitivity",
+	"config.okzoomer.option.reduce_sensitivity.tooltip": "Reduces the mouse sensitivity when zooming.",
 	"config.okzoomer.option.cinematic_camera": "Cinematic Camera",
 	"config.okzoomer.option.cinematic_camera.tooltip": "Enables the cinematic camera while zooming.",
 	"config.okzoomer.option.cinematic_camera.off": "Off",
@@ -6,12 +9,6 @@
 	"config.okzoomer.option.cinematic_camera.multiplied": "Multiplied",
 	"config.okzoomer.option.cinematic_multiplier": "Cinematic Multiplier",
 	"config.okzoomer.option.cinematic_multiplier.tooltip": "The multiplier used on the multiplied cinematic camera.",
-	"config.okzoomer.option.reduce_sensitivity": "Reduce Sensitivity",
-	"config.okzoomer.option.reduce_sensitivity.tooltip": "Reduces the mouse sensitivity when zooming.",
-	"config.okzoomer.option.hide_hands": "Hide Hands",
-	"config.okzoomer.option.hide_hands.tooltip": "While enabled, zooming hides your hands.",
-	"config.okzoomer.option.smooth_transition": "Smooth Transition",
-	"config.okzoomer.option.smooth_transition.tooltip": "Enables smooth transitions when zooming in and out.",
 	"config.okzoomer.option.zoom_transition": "Zoom Transition",
 	"config.okzoomer.option.zoom_transition.tooltip": "Adds transitions between zooms.",
 	"config.okzoomer.option.zoom_transition.off": "Off",
@@ -22,12 +19,11 @@
 	"config.okzoomer.option.zoom_divisor": "Zoom Divisor",
 	"config.okzoomer.option.zoom_divisor.tooltip": "The divisor applied to the FOV's zoom multiplier.",
 	"config.okzoomer.option.zoom_scrolling": "Zoom Scrolling",
-	"config.okzoomer.option.zoom_scrolling.tooltip": "Allows to increase or decrease zoom by scrolling.",
+	"config.okzoomer.option.zoom_scrolling.tooltip": "Allows to increase or decrease zoom by scrolling. Not polished yet.",
 	"config.okzoomer.option.minimum_zoom_divisor": "Minimum Zoom Divisor",
 	"config.okzoomer.option.minimum_zoom_divisor.tooltip": "The minimum value that you can scroll down.",
 	"config.okzoomer.option.maximum_zoom_divisor": "Maximum Zoom Divisor",
 	"config.okzoomer.option.maximum_zoom_divisor.tooltip": "The maximum value that you can scroll up.",
-	"config.okzoomer.category.general": "General",
 	"config.okzoomer.title": "Ok Zoomer Config",
 	"key.okzoomer.category": "Zoom",
 	"key.okzoomer.decrease_zoom": "Decrease Zoom",
