--- a/src/main/resources/assets/okzoomer/lang/en_us.json
+++ b/src/main/resources/assets/okzoomer/lang/en_us.json
@@ -1,29 +1,29 @@
 {
 	"config.okzoomer.category.general": "General",
-	"config.okzoomer.option.reduce_sensitivity": "Reduce Sensitivity",
-	"config.okzoomer.option.reduce_sensitivity.tooltip": "Reduces the mouse sensitivity when zooming.",
-	"config.okzoomer.option.cinematic_camera": "Cinematic Camera",
-	"config.okzoomer.option.cinematic_camera.tooltip": "Enables the cinematic camera while zooming.",
-	"config.okzoomer.option.cinematic_camera.off": "Off",
-	"config.okzoomer.option.cinematic_camera.vanilla": "Vanilla",
-	"config.okzoomer.option.cinematic_camera.multiplied": "Multiplied",
-	"config.okzoomer.option.cinematic_multiplier": "Cinematic Multiplier",
-	"config.okzoomer.option.cinematic_multiplier.tooltip": "The multiplier used on the multiplied cinematic camera.",
-	"config.okzoomer.option.zoom_transition": "Zoom Transition",
-	"config.okzoomer.option.zoom_transition.tooltip": "Adds transitions between zooms.",
-	"config.okzoomer.option.zoom_transition.off": "Off",
-	"config.okzoomer.option.zoom_transition.smooth": "Smooth",
-	"config.okzoomer.option.zoom_transition.linear": "Linear",
-	"config.okzoomer.option.zoom_toggle": "Zoom Toggle",
-	"config.okzoomer.option.zoom_toggle.tooltip": "Enables the ability to toggle zooming.",
-	"config.okzoomer.option.zoom_divisor": "Zoom Divisor",
-	"config.okzoomer.option.zoom_divisor.tooltip": "The divisor applied to the FOV's zoom multiplier.",
-	"config.okzoomer.option.zoom_scrolling": "Zoom Scrolling",
-	"config.okzoomer.option.zoom_scrolling.tooltip": "Allows to increase or decrease zoom by scrolling. Not polished yet.",
-	"config.okzoomer.option.minimum_zoom_divisor": "Minimum Zoom Divisor",
-	"config.okzoomer.option.minimum_zoom_divisor.tooltip": "The minimum value that you can scroll down.",
-	"config.okzoomer.option.maximum_zoom_divisor": "Maximum Zoom Divisor",
-	"config.okzoomer.option.maximum_zoom_divisor.tooltip": "The maximum value that you can scroll up.",
+	"config.okzoomer.reduce_sensitivity": "Reduce Sensitivity",
+	"config.okzoomer.reduce_sensitivity.tooltip": "Reduces the mouse sensitivity when zooming.",
+	"config.okzoomer.cinematic_camera": "Cinematic Camera",
+	"config.okzoomer.cinematic_camera.tooltip": "Enables the cinematic camera while zooming.",
+	"config.okzoomer.cinematic_camera.off": "Off",
+	"config.okzoomer.cinematic_camera.vanilla": "Vanilla",
+	"config.okzoomer.cinematic_camera.multiplied": "Multiplied",
+	"config.okzoomer.cinematic_multiplier": "Cinematic Multiplier",
+	"config.okzoomer.cinematic_multiplier.tooltip": "The multiplier used on the multiplied cinematic camera.",
+	"config.okzoomer.zoom_transition": "Zoom Transition",
+	"config.okzoomer.zoom_transition.tooltip": "Adds transitions between zooms.",
+	"config.okzoomer.zoom_transition.off": "Off",
+	"config.okzoomer.zoom_transition.smooth": "Smooth",
+	"config.okzoomer.zoom_transition.linear": "Linear",
+	"config.okzoomer.zoom_toggle": "Zoom Toggle",
+	"config.okzoomer.zoom_toggle.tooltip": "Enables the ability to toggle zooming.",
+	"config.okzoomer.zoom_divisor": "Zoom Divisor",
+	"config.okzoomer.zoom_divisor.tooltip": "The divisor applied to the FOV's zoom multiplier.",
+	"config.okzoomer.zoom_scrolling": "Zoom Scrolling",
+	"config.okzoomer.zoom_scrolling.tooltip": "Allows to increase or decrease zoom by scrolling. Not polished yet.",
+	"config.okzoomer.minimum_zoom_divisor": "Minimum Zoom Divisor",
+	"config.okzoomer.minimum_zoom_divisor.tooltip": "The minimum value that you can scroll down.",
+	"config.okzoomer.maximum_zoom_divisor": "Maximum Zoom Divisor",
+	"config.okzoomer.maximum_zoom_divisor.tooltip": "The maximum value that you can scroll up.",
 	"config.okzoomer.title": "Ok Zoomer Config",
 	"key.okzoomer.category": "Zoom",
 	"key.okzoomer.decrease_zoom": "Decrease Zoom",
