--- a/src/main/resources/assets/okzoomer/lang/en_us.json
+++ b/src/main/resources/assets/okzoomer/lang/en_us.json
@@ -4,20 +4,24 @@
 	"config.okzoomer.reduce_sensitivity.tooltip": "Reduces the mouse sensitivity when zooming.",
 	"config.okzoomer.cinematic_camera": "Cinematic Camera",
 	"config.okzoomer.cinematic_camera.tooltip": "Enables the cinematic camera while zooming.",
-	"config.okzoomer.cinematic_camera.off": "Off",
-	"config.okzoomer.cinematic_camera.vanilla": "Vanilla",
-	"config.okzoomer.cinematic_camera.multiplied": "Multiplied",
+	"config.okzoomer.cinematic_camera.enum.off": "Off",
+	"config.okzoomer.cinematic_camera.enum.vanilla": "Vanilla",
+	"config.okzoomer.cinematic_camera.enum.multiplied": "Multiplied",
 	"config.okzoomer.cinematic_multiplier": "Cinematic Multiplier",
 	"config.okzoomer.cinematic_multiplier.tooltip": "The multiplier used on the multiplied cinematic camera.",
 	"config.okzoomer.zoom_transition": "Zoom Transition",
 	"config.okzoomer.zoom_transition.tooltip": "Adds transitions between zooms.",
-	"config.okzoomer.zoom_transition.off": "Off",
-	"config.okzoomer.zoom_transition.smooth": "Smooth",
-	"config.okzoomer.zoom_transition.linear": "Linear",
+	"config.okzoomer.zoom_transition.enum.off": "Off",
+	"config.okzoomer.zoom_transition.enum.smooth": "Smooth",
+	"config.okzoomer.zoom_transition.enum.linear": "Linear",
 	"config.okzoomer.zoom_toggle": "Zoom Toggle",
 	"config.okzoomer.zoom_toggle.tooltip": "Enables the ability to toggle zooming.",
 	"config.okzoomer.zoom_divisor": "Zoom Divisor",
 	"config.okzoomer.zoom_divisor.tooltip": "The divisor applied to the FOV's zoom multiplier.",
+	"config.okzoomer.zoom_mode": "Zoom Mode",
+	"config.okzoomer.zoom_mode.enum.hold": "Hold",
+	"config.okzoomer.zoom_mode.enum.toggle": "Toggle",
+	"config.okzoomer.zoom_mode.enum.persistent": "Persistent",
 	"config.okzoomer.zoom_scrolling": "Zoom Scrolling",
 	"config.okzoomer.zoom_scrolling.tooltip": "Allows to increase or decrease zoom by scrolling. Not polished yet.",
 	"config.okzoomer.minimum_zoom_divisor": "Minimum Zoom Divisor",
@@ -28,5 +32,6 @@
 	"key.okzoomer.category": "Zoom",
 	"key.okzoomer.decrease_zoom": "Decrease Zoom",
 	"key.okzoomer.increase_zoom": "Increase Zoom",
+	"key.okzoomer.reset_zoom": "Reset Zoom",
 	"key.okzoomer.zoom": "Zoom"
 }
