Begin config reorganisation Adios, Fiber2Cloth

--- a/src/main/resources/assets/okzoomer/lang/en_us.json
+++ b/src/main/resources/assets/okzoomer/lang/en_us.json
@@ -4,9 +4,9 @@
 	"config.okzoomer.reduce_sensitivity.tooltip": "Reduces the mouse sensitivity when zooming.",
 	"config.okzoomer.cinematic_camera": "Cinematic Camera",
 	"config.okzoomer.cinematic_camera.tooltip": "Enables the cinematic camera while zooming.",
-	"config.okzoomer.cinematic_camera.enum.off": "Off",
-	"config.okzoomer.cinematic_camera.enum.vanilla": "Vanilla",
-	"config.okzoomer.cinematic_camera.enum.multiplied": "Multiplied",
+	"config.okzoomer.cinematic_camera.off": "Off",
+	"config.okzoomer.cinematic_camera.vanilla": "Vanilla",
+	"config.okzoomer.cinematic_camera.multiplied": "Multiplied",
 	"config.okzoomer.cinematic_multiplier": "Cinematic Multiplier",
 	"config.okzoomer.cinematic_multiplier.tooltip": "The multiplier used on the multiplied cinematic camera.",
 	"config.okzoomer.zoom_transition": "Zoom Transition",
