Test if Git works again Also, you get 12 more owos, 'cause you're a zoomer.

--- a/src/main/resources/assets/okzoomer/lang/en_us.json
+++ b/src/main/resources/assets/okzoomer/lang/en_us.json
@@ -11,17 +11,17 @@
 	"config.okzoomer.cinematic_multiplier.tooltip": "The multiplier used on the multiplied cinematic camera.",
 	"config.okzoomer.zoom_transition": "Zoom Transition",
 	"config.okzoomer.zoom_transition.tooltip": "Adds transitions between zooms.",
-	"config.okzoomer.zoom_transition.enum.off": "Off",
-	"config.okzoomer.zoom_transition.enum.smooth": "Smooth",
-	"config.okzoomer.zoom_transition.enum.linear": "Linear",
+	"config.okzoomer.zoom_transition.off": "Off",
+	"config.okzoomer.zoom_transition.smooth": "Smooth",
+	"config.okzoomer.zoom_transition.linear": "Linear",
 	"config.okzoomer.zoom_toggle": "Zoom Toggle",
 	"config.okzoomer.zoom_toggle.tooltip": "Enables the ability to toggle zooming.",
 	"config.okzoomer.zoom_divisor": "Zoom Divisor",
 	"config.okzoomer.zoom_divisor.tooltip": "The divisor applied to the FOV's zoom multiplier.",
 	"config.okzoomer.zoom_mode": "Zoom Mode",
-	"config.okzoomer.zoom_mode.enum.hold": "Hold",
-	"config.okzoomer.zoom_mode.enum.toggle": "Toggle",
-	"config.okzoomer.zoom_mode.enum.persistent": "Persistent",
+	"config.okzoomer.zoom_mode.hold": "Hold",
+	"config.okzoomer.zoom_mode.toggle": "Toggle",
+	"config.okzoomer.zoom_mode.persistent": "Persistent",
 	"config.okzoomer.zoom_scrolling": "Zoom Scrolling",
 	"config.okzoomer.zoom_scrolling.tooltip": "Allows to increase or decrease zoom by scrolling. Not polished yet.",
 	"config.okzoomer.minimum_zoom_divisor": "Minimum Zoom Divisor",
