Do a bunch of stuff

--- a/src/main/resources/assets/okzoomer/lang/en_us.json
+++ b/src/main/resources/assets/okzoomer/lang/en_us.json
@@ -1,12 +1,14 @@
 {
-	"config.okzoomer.category.general": "General",
-	"config.okzoomer.reduce_sensitivity": "Reduce Sensitivity",
-	"config.okzoomer.reduce_sensitivity.tooltip": "Reduces the mouse sensitivity when zooming.",
+	"config.okzoomer.category.features": "Features",
 	"config.okzoomer.cinematic_camera": "Cinematic Camera",
 	"config.okzoomer.cinematic_camera.tooltip": "Enables the cinematic camera while zooming.",
 	"config.okzoomer.cinematic_camera.off": "Off",
 	"config.okzoomer.cinematic_camera.vanilla": "Vanilla",
 	"config.okzoomer.cinematic_camera.multiplied": "Multiplied",
+	"config.okzoomer.category.values": "Values",
+	"config.okzoomer.reduce_sensitivity": "Reduce Sensitivity",
+	"config.okzoomer.reduce_sensitivity.tooltip": "Reduces the mouse sensitivity when zooming.",
+	"config.okzoomer.category.presets": "Presets",
 	"config.okzoomer.cinematic_multiplier": "Cinematic Multiplier",
 	"config.okzoomer.cinematic_multiplier.tooltip": "The multiplier used on the multiplied cinematic camera.",
 	"config.okzoomer.zoom_transition": "Zoom Transition",
