--- a/src/main/resources/assets/okzoomer/lang/en_us.json
+++ b/src/main/resources/assets/okzoomer/lang/en_us.json
@@ -2,24 +2,34 @@
 	"config.okzoomer.title": "Ok Zoomer Config",
 	"config.okzoomer.category.features": "Features",
 	"config.okzoomer.cinematic_camera": "Cinematic Camera",
-	"config.okzoomer.cinematic_camera.tooltip": "Enables the cinematic camera while zooming.",
 	"config.okzoomer.cinematic_camera.off": "Off",
 	"config.okzoomer.cinematic_camera.vanilla": "Vanilla",
 	"config.okzoomer.cinematic_camera.multiplied": "Multiplied",
+	"config.okzoomer.cinematic_camera.tooltip": "Defines the cinematic camera while zooming.",
+	"config.okzoomer.cinematic_camera.tooltip.off": "\"Off\" disables the cinematic camera.",
+	"config.okzoomer.cinematic_camera.tooltip.vanilla": "\"Smooth\" uses Vanilla's cinematic camera.",
+	"config.okzoomer.cinematic_camera.tooltip.multiplied": "\"Multiplied\" is a multiplied variant of \"Vanilla\".",
 	"config.okzoomer.reduce_sensitivity": "Reduce Sensitivity",
 	"config.okzoomer.reduce_sensitivity.tooltip": "Reduces the mouse sensitivity when zooming.",
 	"config.okzoomer.zoom_transition": "Zoom Transition",
-	"config.okzoomer.zoom_transition.tooltip": "Adds transitions between zooms.",
 	"config.okzoomer.zoom_transition.off": "Off",
 	"config.okzoomer.zoom_transition.smooth": "Smooth",
 	"config.okzoomer.zoom_transition.sine": "Sine",
+	"config.okzoomer.zoom_transition.tooltip": "Adds transitions between zooms.",
+	"config.okzoomer.zoom_transition.tooltip.off": "\"Off\" disables transitions.",
+	"config.okzoomer.zoom_transition.tooltip.smooth": "\"Smooth\" replicates Vanilla's dynamic FOV.",
+	"config.okzoomer.zoom_transition.tooltip.sine": "\"Sine\" applies the transition with a sine function.",
 	"config.okzoomer.zoom_mode": "Zoom Mode",
-	"config.okzoomer.zoom_mode.tooltip": "The behavior of the zoom key.",
 	"config.okzoomer.zoom_mode.hold": "Hold",
 	"config.okzoomer.zoom_mode.toggle": "Toggle",
 	"config.okzoomer.zoom_mode.persistent": "Persistent",
+	"config.okzoomer.zoom_mode.tooltip": "The behavior of the zoom key.",
+	"config.okzoomer.zoom_mode.tooltip.hold": "\"Hold\" needs the zoom key to be hold.",
+	"config.okzoomer.zoom_mode.tooltip.toggle": "\"Toggle\" has the zoom key toggle the zoom.",
+	"config.okzoomer.zoom_mode.tooltip.persistent": "\"Persistent\" makes the zoom permanent.",
 	"config.okzoomer.zoom_scrolling": "Zoom Scrolling",
-	"config.okzoomer.zoom_scrolling.tooltip": "Allows to increase or decrease zoom by scrolling. Not polished yet.",
+	"config.okzoomer.zoom_scrolling.tooltip": "Allows to increase or decrease zoom by scrolling.",
+	"config.okzoomer.zoom_scrolling.tooltip.warning": "The functionality might not be final.",
 	"config.okzoomer.category.values": "Values",
 	"config.okzoomer.zoom_divisor": "Zoom Divisor",
 	"config.okzoomer.zoom_divisor.tooltip": "The divisor applied to the FOV's zoom multiplier.",
@@ -28,12 +38,20 @@
 	"config.okzoomer.maximum_zoom_divisor": "Maximum Zoom Divisor",
 	"config.okzoomer.maximum_zoom_divisor.tooltip": "The maximum value that you can scroll up.",
 	"config.okzoomer.cinematic_multiplier": "Cinematic Multiplier",
-	"config.okzoomer.cinematic_multiplier.tooltip": "The multiplier used on the multiplied cinematic camera.",
+	"config.okzoomer.cinematic_multiplier.tooltip": "The multiplier used for the multiplied cinematic camera.",
+	"config.okzoomer.smooth_multiplier": "Smooth Multiplier",
+	"config.okzoomer.smooth_multiplier.tooltip": "The multiplier used for smooth transitions.",
 	"config.okzoomer.category.presets": "Presets",
 	"config.okzoomer.reset_to_preset": "Reset to Preset",
 	"config.okzoomer.reset_to_preset.none": "None",
 	"config.okzoomer.reset_to_preset.default": "Default",
 	"config.okzoomer.reset_to_preset.classic": "Classic",
+	"config.okzoomer.reset_to_preset.persistent": "Persistent",
+	"config.okzoomer.reset_to_preset.tooltip": "Resets the config in a specific way once saved.",
+	"config.okzoomer.reset_to_preset.tooltip.none": "\"None\" keeps the config intact.",
+	"config.okzoomer.reset_to_preset.tooltip.default": "\"Default\" resets to the default.",
+	"config.okzoomer.reset_to_preset.tooltip.classic": "\"Classic\" makes the mod imitate OptiFine's zoom.",
+	"config.okzoomer.reset_to_preset.tooltip.persistent": "\"Persistent\" is based on the \"Persistent\" zoom mode.",
 	"key.okzoomer.category": "Zoom",
 	"key.okzoomer.decrease_zoom": "Decrease Zoom",
 	"key.okzoomer.increase_zoom": "Increase Zoom",
