--- a/src/main/resources/assets/okzoomer/lang/en_us.json
+++ b/src/main/resources/assets/okzoomer/lang/en_us.json
@@ -41,6 +41,8 @@
 	"config.okzoomer.cinematic_multiplier.tooltip": "The multiplier used for the multiplied cinematic camera.",
 	"config.okzoomer.smooth_multiplier": "Smooth Multiplier",
 	"config.okzoomer.smooth_multiplier.tooltip": "The multiplier used for smooth transitions.",
+	"config.okzoomer.scroll_step": "Scroll Step",
+	"config.okzoomer.scroll_step.tooltip": "The number which is de/incremented by zoom scrolling.",
 	"config.okzoomer.category.presets": "Presets",
 	"config.okzoomer.reset_to_preset": "Reset to Preset",
 	"config.okzoomer.reset_to_preset.none": "None",
