--- a/src/main/resources/assets/okzoomer/lang/en_us.json
+++ b/src/main/resources/assets/okzoomer/lang/en_us.json
@@ -42,7 +42,11 @@
 	"config.okzoomer.smooth_multiplier": "Smooth Multiplier",
 	"config.okzoomer.smooth_multiplier.tooltip": "The multiplier used for smooth transitions.",
 	"config.okzoomer.scroll_step": "Scroll Step",
-	"config.okzoomer.scroll_step.tooltip": "The number which is de/incremented by zoom scrolling.",
+	"config.okzoomer.scroll_step.tooltip.1": "The number which is de/incremented by zoom scrolling.",
+	"config.okzoomer.scroll_step.tooltip.2": "Used when the zoom divisor is above the starting point.",
+	"config.okzoomer.lesser_scroll_step": "Lesser Scroll Step",
+	"config.okzoomer.lesser_scroll_step.tooltip.1": "The number which is de/incremented by zoom scrolling.",
+	"config.okzoomer.lesser_scroll_step.tooltip.2": "Used when the zoom divisor is below the starting point.",
 	"config.okzoomer.category.presets": "Presets",
 	"config.okzoomer.reset_to_preset": "Reset to Preset",
 	"config.okzoomer.reset_to_preset.none": "None",
