Push current progress Highlights: Reverted to 1.16.1, added the Extra Keybinds config option, converted the key hijack into a file-only config option, updated Gradle, cleaned up fabric.mod.json. Next: A replacement of sine transitions, then potential beta?

--- a/src/main/resources/assets/okzoomer/lang/en_us.json
+++ b/src/main/resources/assets/okzoomer/lang/en_us.json
@@ -29,6 +29,9 @@
 	"config.okzoomer.zoom_mode.tooltip.persistent": "\"Persistent\" makes the zoom permanent.",
 	"config.okzoomer.zoom_scrolling": "Zoom Scrolling",
 	"config.okzoomer.zoom_scrolling.tooltip": "Allows to increase or decrease zoom by scrolling.",
+	"config.okzoomer.extra_keybinds": "Extra Keybinds",
+	"config.okzoomer.extra_keybinds.tooltip": "Adds zoom manipulation keys along with the zoom key.",
+	"config.okzoomer.extra_keybinds.tooltip.warning": "A restart will be required in order to apply the changes.",
 	"config.okzoomer.category.values": "Values",
 	"config.okzoomer.zoom_divisor": "Zoom Divisor",
 	"config.okzoomer.zoom_divisor.tooltip": "The divisor applied to the FOV's zoom multiplier.",
